# rkglib

./: .gitignore  Cargo.toml
examples/: canvas_demo.rs  forest_fires.rs  shader.wgsl  simple_fractal.rs  simple_scatter_plot.rs  wgpu_hello_triangle.rs
src/: bin.rs  lib.rs
src/graphics/: charts.rs  color.rs  mod.rs
src/graphics/charts/: mod.rs  scatter_plot.rs  test_fractal_chart.rs
src/math/: mod.rs
src/math/datatypes/: matrix.rs  mod.rs  rational.rs  rkgtab.rs  set.rs
src/math/statistics/: combinatorics.rs  mod.rs  probubility.rs
