[package]
name = "rkglib"
version = "0.1.0"
edition = "2024"

[lib]
name = "rkglib"
path = "src/lib.rs"

[[bin]]
name = "rkgbin"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
error-iter = "0.4.1"
log = "0.4.29"
minifb = "0.28.0"
num-traits = "0.2.19"
pollster = "0.4.0"
rand = "0.9.2"
rusttype = "0.9.3"
softbuffer = "0.4.6"
wgpu = "28.0.0"
winit = "0.30.12"
